--- a/src/services/grooveshark/GroovesharkConfigWidget.ui
+++ b/src/services/grooveshark/GroovesharkConfigWidget.ui
@@ -1,150 +1,186 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>GroovesharkConfigWidget</class>
- <widget class="QWidget" name="GroovesharkConfigWidget">
+ <class>MagnatuneConfigWidget</class>
+ <widget class="QWidget" name="MagnatuneConfigWidget">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>336</width>
-    <height>306</height>
+    <width>402</width>
+    <height>388</height>
    </rect>
   </property>
-  <property name="minimumSize">
-   <size>
-    <width>1</width>
-    <height>1</height>
-   </size>
-  </property>
-  <layout class="QGridLayout" name="gridLayout_2">
-   <property name="margin">
-    <number>0</number>
-   </property>
-   <item row="5" column="0">
-    <spacer name="verticalSpacer">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>0</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-   <item row="0" column="0" rowspan="2">
-    <widget class="QGroupBox" name="groupBox3">
+  <layout class="QVBoxLayout" name="verticalLayout">
+   <item>
+    <widget class="QGroupBox" name="groupBox_3">
      <property name="title">
-      <string>Grooveshark Profile</string>
+      <string>Redownloads</string>
      </property>
      <layout class="QGridLayout" name="gridLayout">
-      <item row="1" column="0">
-       <widget class="QLabel" name="labelUsername">
+      <item row="0" column="0" colspan="2">
+       <widget class="QLabel" name="label_7">
         <property name="text">
-         <string>&amp;Username:</string>
-        </property>
-        <property name="wordWrap">
-         <bool>false</bool>
-        </property>
-        <property name="buddy">
-         <cstring>kcfg_ScrobblerUsername</cstring>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="0">
-       <widget class="QLabel" name="labelPassword">
-        <property name="text">
-         <string>&amp;Password:</string>
-        </property>
-        <property name="wordWrap">
-         <bool>false</bool>
-        </property>
-        <property name="buddy">
-         <cstring>kcfg_ScrobblerPassword</cstring>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="1">
-       <widget class="KLineEdit" name="kcfg_ScrobblerPassword">
-        <property name="echoMode">
-         <enum>QLineEdit::Password</enum>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="1">
-       <widget class="KLineEdit" name="kcfg_ScrobblerUsername"/>
-      </item>
-      <item row="4" column="0" colspan="2">
-       <widget class="QLabel" name="kActiveLabel1">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="text">
-         <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
-&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
-p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Ubuntu'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;a href=&quot;http://grooveshark.com/join&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#296fbe;&quot;&gt;Sign up to Grooveshark&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         <string>Enter your e-mail here to be able to redownload any previous purchase from Magnatune directly from within Amarok.</string>
         </property>
         <property name="wordWrap">
          <bool>true</bool>
         </property>
        </widget>
       </item>
-      <item row="3" column="1">
-       <widget class="QPushButton" name="testLogin">
+      <item row="1" column="0">
+       <widget class="QLabel" name="label_6">
         <property name="text">
-         <string>&amp;Test Login</string>
+         <string comment="Username for logins to Magnatune">E-mail:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="KLineEdit" name="emailEdit">
+        <property name="enabled">
+         <bool>true</bool>
+        </property>
+        <property name="text">
+         <string comment="Username for logins to Magnatune"/>
         </property>
        </widget>
       </item>
      </layout>
     </widget>
    </item>
-   <item row="4" column="0">
-    <widget class="QLabel" name="kActiveLabel2">
-     <property name="text">
-      <string>Why not join the &lt;a href=&quot;http://www.last.fm:80/group/Amarok+Users&quot;&gt;Amarok last.fm group&lt;/a&gt; and share your musical tastes with other Amarok users?</string>
-     </property>
-     <property name="wordWrap">
-      <bool>true</bool>
-     </property>
-    </widget>
-   </item>
-   <item row="3" column="0">
-    <widget class="QGroupBox" name="groupBox2">
+   <item>
+    <widget class="QGroupBox" name="groupBox">
      <property name="title">
-      <string>Last.fm Services</string>
+      <string>Membership Options</string>
      </property>
-     <layout class="QGridLayout" name="gridLayout_3">
+     <layout class="QGridLayout">
       <item row="0" column="0">
-       <widget class="QCheckBox" name="kcfg_SubmitPlayedSongs">
+       <widget class="QCheckBox" name="isMemberCheckbox">
+        <property name="text">
+         <string>I am a member</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <spacer>
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="label">
+        <property name="text">
+         <string>Membership type:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="QComboBox" name="typeComboBox">
         <property name="enabled">
          <bool>false</bool>
         </property>
+        <item>
+         <property name="text">
+          <string>Stream</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>Download</string>
+         </property>
+        </item>
+       </widget>
+      </item>
+      <item row="2" column="0">
+       <widget class="QLabel" name="label_2">
         <property name="text">
-         <string>&amp;Submit tracks</string>
+         <string comment="Username for logins to Magnatune">Username:</string>
         </property>
-        <property name="checked">
+       </widget>
+      </item>
+      <item row="2" column="1">
+       <widget class="KLineEdit" name="usernameEdit">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="0">
+       <widget class="QLabel" name="label_3">
+        <property name="text">
+         <string>Password:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="1">
+       <widget class="KLineEdit" name="passwordEdit">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="0" colspan="2">
+       <widget class="QLabel" name="label_4">
+        <property name="text">
+         <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'DejaVu Serif'; font-size:8pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'Sans Serif';&quot;&gt;For more information about the Magnatune.com memberships, and to sign up, go to  &lt;/span&gt;&lt;a href=&quot;http://magnatune.com/compare_plans?referal_id=amarok&quot;&gt;&lt;span style=&quot; font-family:'Sans Serif'; text-decoration: underline; color:#0000ff;&quot;&gt;http://magnatune.com/compare_plans&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        </property>
+        <property name="wordWrap">
+         <bool>true</bool>
+        </property>
+        <property name="openExternalLinks">
          <bool>true</bool>
         </property>
        </widget>
       </item>
-      <item row="1" column="0">
-       <widget class="QCheckBox" name="kcfg_RetrieveSimilarArtists">
-        <property name="enabled">
-         <bool>false</bool>
-        </property>
+     </layout>
+    </widget>
+   </item>
+   <item>
+    <widget class="QGroupBox" name="groupBox_2">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="title">
+      <string>Stream Options</string>
+     </property>
+     <layout class="QGridLayout">
+      <item row="0" column="0">
+       <widget class="QLabel" name="label_5">
         <property name="text">
-         <string>&amp;Retrieve similar artists</string>
+         <string>Preview stream type:</string>
         </property>
-        <property name="checked">
-         <bool>false</bool>
-        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QComboBox" name="streamTypeComboBox">
+        <item>
+         <property name="text">
+          <string>Ogg</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>High Quality Mp3</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>Low Quality Mp3</string>
+         </property>
+        </item>
        </widget>
       </item>
      </layout>
@@ -152,7 +188,6 @@ p, li { white-space: pre-wrap; }
    </item>
   </layout>
  </widget>
- <layoutdefault spacing="6" margin="11"/>
  <customwidgets>
   <customwidget>
    <class>KLineEdit</class>
@@ -160,16 +195,55 @@ p, li { white-space: pre-wrap; }
    <header>klineedit.h</header>
   </customwidget>
  </customwidgets>
- <tabstops>
-  <tabstop>kcfg_ScrobblerUsername</tabstop>
-  <tabstop>kcfg_ScrobblerPassword</tabstop>
-  <tabstop>testLogin</tabstop>
-  <tabstop>kcfg_SubmitPlayedSongs</tabstop>
-  <tabstop>kcfg_RetrieveSimilarArtists</tabstop>
- </tabstops>
- <includes>
-  <include location="local">klineedit.h</include>
- </includes>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>isMemberCheckbox</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>typeComboBox</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>76</x>
+     <y>51</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>252</x>
+     <y>81</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>isMemberCheckbox</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>usernameEdit</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>76</x>
+     <y>51</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>252</x>
+     <y>115</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>isMemberCheckbox</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>passwordEdit</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>76</x>
+     <y>51</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>252</x>
+     <y>150</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
