--- a/src/services/grooveshark/GroovesharkConfigWidget.ui
+++ b/src/services/grooveshark/GroovesharkConfigWidget.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>MagnatuneConfigWidget</class>
- <widget class="QWidget" name="MagnatuneConfigWidget">
+ <class>GroovesharkConfigWidget</class>
+ <widget class="QWidget" name="GroovesharkConfigWidget">
   <property name="geometry">
    <rect>
     <x>0</x>
